--- a/package.json
+++ b/package.json
@@ -21,13 +21,21 @@
   },
   "homepage": "https://github.com/curiousYi/simpleCRUD#readme",
   "dependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-env": "^1.1.7",
+    "babel-preset-react": "^6.16.0",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "faker": "^3.1.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
-    "sha1": "^1.1.1"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "sha1": "^1.1.1",
+    "webpack": "^1.14.0"
   }
 }
